--- a/cntnt_agrgtr/TODO
+++ b/cntnt_agrgtr/TODO
@@ -1,15 +1,15 @@
 27.10.2020
-
-1. Реализовать разделение новостей по категориям: 
-(Каждый источник имеет одну из категорий, новости которой отображаются в выбранной теме)
-    Темы новостей:
-        Технологии
-        Спорт
-        Политика
-        Развлечения
-        Образ жизни
-        Бизнесс
-        Наука
+TODO:
+~~1. Реализовать разделение новостей по категориям: ~~
+    (Каждый источник имеет одну из категорий, новости которой отображаются в выбранной теме)
+        Темы новостей:
+            Технологии
+            Спорт
+            Политика
+            Развлечения
+            Образ жизни
+            Бизнесс
+            Наука 
 2. Добавить навигацию в шапке, которая содержит вышеперечисленные темы.
 3. Реализовать страницы просмотра тем.
 4. Показывать сниппет новости при наведении на нее. (Добавить сниппет в модели)
