--- a/cntnt_agrgtr/TODO
+++ b/cntnt_agrgtr/TODO
@@ -1,6 +1,6 @@
 27.10.2020
 TODO:
-~~1. Реализовать разделение новостей по категориям: ~~
+~~ 1. Реализовать разделение новостей по категориям: ~~
     (Каждый источник имеет одну из категорий, новости которой отображаются в выбранной теме)
         Темы новостей:
             Технологии
@@ -10,8 +10,8 @@ TODO:
             Образ жизни
             Бизнесс
             Наука 
-2. Добавить навигацию в шапке, которая содержит вышеперечисленные темы.
-3. Реализовать страницы просмотра тем.
+~~ 2. Добавить навигацию в шапке, которая содержит вышеперечисленные темы. ~~
+~~ 3. Реализовать страницы просмотра тем. ~~
 4. Показывать сниппет новости при наведении на нее. (Добавить сниппет в модели)
 5. Вывести урлы для источников.
 6. CSS
